# AetherionOS

./: FINAL_REPORT.md  FINAL_STATUS.md  IMPLEMENTATION_REPORT.md  ISO_BUILD.md  PHASE1_RESULTS.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  STATUS.md  SUCCESS_REPORT.md  VERIFICATION_REPORT.md
docs/: PHASE1.2_PAGING.md  PHASE1.3_HEAP.md  PHASE2_SUMMARY.md
kernel/: Cargo.toml  aetherion-kernel  x86_64-unknown-none.json
kernel/src/: main.rs
kernel/src/ai/: inference.rs  mod.rs  tensor.rs  whisper.rs
kernel/src/allocator/: bump.rs  linked_list.rs  mod.rs
kernel/src/drivers/: ata.rs  keyboard.rs  mod.rs  vga.rs
kernel/src/drivers/pci/: mod.rs
kernel/src/drivers/sdr/: demodulator.rs  mod.rs  rtlsdr.rs
kernel/src/drivers/usb/: descriptor.rs  hid.rs  mod.rs  xhci.rs
kernel/src/fs/: fat32.rs  mod.rs  vfs.rs
kernel/src/gdt/: mod.rs
kernel/src/interrupts/: handlers.rs  idt.rs  mod.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: bitmap.rs  frame_allocator.rs  mod.rs  page_table.rs  paging.rs
kernel/src/net/: ethernet.rs  ip.rs  mod.rs  socket.rs  tcp.rs
kernel/src/process/: mod.rs
kernel/src/syscall/: mod.rs
